--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.191"
+    "@types/lodash": "^4.14.191",
+    "@types/luxon": "^3.1.0"
   }
 }
