--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "axios": "^1.2.0",
+    "dotenv": "^16.0.3",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "lodash": "^4.17.21",
@@ -28,6 +29,7 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/lodash": "^4.14.191",
     "@types/luxon": "^3.1.0"
   }
