Role Service is Working

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
-NODE_ENV=development
-POD_AUTH_USERNAME=lisa.jones
-POD_AUTH_PASSWORD=iXw5G?4^
+NODE_ENV=dev
+POD_AUTH_USERNAME=LISA.JONES
+POD_AUTH_PASSWORD='aCt3x#8#'
 POD_URL=https://fa-etas-dev21-saasfademo1.ds-fa.oraclepdemos.com
 FUSION_ACTION_WORKERS=hcmRestApi/resources/11.13.18.05/workers
 FUSION_ACTION_USER_ACCOUNTS=hcmRestApi/resources/11.13.18.05/userAccounts
